Code for the 2015 smartdashboard extension.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 *.out
 *.app
 2011/2011DrivingProgram/PPC603gnu/
+2015/2015SmartDashboardExtension/.classpath
+2015/2015SmartDashboardExtension/.project
+2015/2015SmartDashboardExtension/.settings/
